templates/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert --volumes hostPath
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mariadb
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mariadb
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yml convert --volumes hostPath
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: mariadb
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
            - name: MYSQL_PASSWORD
            - name: MYSQL_ROOT_PASSWORD
            - name: MYSQL_USER
          image: 'wodby/mariadb:'
          name: -mariadb
          ports:
            - containerPort: 8881
          resources: {}
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
status: {}
