templates/solr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert --volumes hostPath
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: solr
  name: solr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: solr
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yml convert --volumes hostPath
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: solr
    spec:
      containers:
        - env:
            - name: SOLR_DEFAULT_CONFIG_SET
            - name: SOLR_HEAP
              value: 1024m
            - name: ZK_HOST
              value: zookeeper:2181
          image: 'wodby/solr:'
          name: -solr
          ports:
            - containerPort: 8884
          resources: {}
      restartPolicy: Always
status: {}
