templates/zookeeper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert --volumes hostPath
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: zookeeper
  name: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: zookeeper
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yml convert --volumes hostPath
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: zookeeper
    spec:
      containers:
        - env:
            - name: ZOO_4LW_COMMANDS_WHITELIST
              value: mntr, conf, ruok
            - name: ZOO_MY_ID
              value: "1"
            - name: ZOO_SERVERS
              value: server.1=zookeeper:2888:3888;2181
          image: 'zookeeper:'
          name: -zookeeper
          ports:
            - containerPort: 8885
          resources: {}
      restartPolicy: Always
status: {}
