templates/crond-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert --volumes hostPath
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: crond
  name: crond
spec:
  ports:
    - name: "8883"
      port: 8883
      targetPort: 8883
  selector:
    io.kompose.service: crond
status:
  loadBalancer: {}
