templates/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert --volumes hostPath
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mariadb
  name: mariadb
spec:
  ports:
    - name: "8881"
      port: 8881
      targetPort: 8881
  selector:
    io.kompose.service: mariadb
status:
  loadBalancer: {}
