templates/php-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert --volumes hostPath
    kompose.service.expose: drupal.test
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: php
  name: php
spec:
  ports:
    - name: "8882"
      port: 8882
      targetPort: 8882
  selector:
    io.kompose.service: php
status:
  loadBalancer: {}
