templates/solr-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert --volumes hostPath
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: solr
  name: solr
spec:
  ports:
    - name: "8884"
      port: 8884
      targetPort: 8884
  selector:
    io.kompose.service: solr
status:
  loadBalancer: {}
