templates/php-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert --volumes hostPath
    kompose.service.expose: drupal.test
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: php
  name: php
spec:
  rules:
    - host: drupal.test
      http:
        paths:
          - backend:
              service:
                name: php
                port:
                  number: 8882
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
